[gd_scene load_steps=2 format=3 uid="uid://dogfmy8258da4"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_0eq0g"]

[node name="Game Manager" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_0eq0g")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="start_game_loop" from="." to="." method="_on_start_game_loop"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
